--- a/application/views/package.json
+++ b/application/views/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
+    "highlight.js": "^9.13.1",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5"
   },
