--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "jquery": "^3.2.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.3",
